# EngJOY

./: CMakeLists.txt  README.md  card.cpp  card.h  deckeditor.cpp  deckeditor.h  deckeditor.ui  filemanager.cpp  filemanager.h  learnmode.cpp  learnmode.h  learnmode.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  testmode.cpp  testmode.h  testmode.ui  tests.cpp  tst_testfilemanager.cpp
tests/: CMakeLists.txt  card_tests.cpp  filemanager_tests.cpp  randomcard_tests.cpp  tests.cpp
